--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -3,11 +3,27 @@
     <item
         android:id="@+id/page_1"
         android:enabled="true"
-        android:icon="@drawable/icon_1"
-        android:title="Item 1"/>
+        android:icon="@drawable/ic_home"
+        android:title="Home"/>
     <item
         android:id="@+id/page_2"
         android:enabled="true"
-        android:icon="@drawable/icon_2"
-        android:title="Item 2"/>
+        android:icon="@drawable/ic_music"
+        android:title="My Music"/>
+    <item
+        android:id="@+id/page_3"
+        android:enabled="true"
+        android:icon="@drawable/ic_search"
+        android:title="Search"/>
+    <item
+        android:id="@+id/page_4"
+        android:enabled="true"
+        android:icon="@drawable/ic_crown"
+        android:title="Premium"/>
+    <item
+        android:id="@+id/page_5"
+        android:enabled="true"
+        android:icon="@drawable/ic_settings"
+        android:title="Settings"/>
+
 </menu>
